feat(company-evaluation): 完善公司评估与 LLM 集成
- 公司评估 API、前端展示与后端 Service/Controller/DTO 优化
- Spring AI LLM 客户端与 company-evaluation prompt 精简
- 登录状态检查、Playwright、JobFilter、Config 等调整
- 更新 dev-log、README 与文档截图

Made-with: Cursor